--- a/src/components/salon-receptionist/salon-receptionist.scss
+++ b/src/components/salon-receptionist/salon-receptionist.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
+  padding-bottom: 80px;
   
   .availability-results, .booking-results, .cancellation-results {
     background-color: #f5f5f5;
