--- a/src/components/settings-dialog/settings-dialog.scss
+++ b/src/components/settings-dialog/settings-dialog.scss
@@ -75,6 +75,7 @@
     width: 696px;
     height: 593px;
     transform: translate(-25%, -50%);
+    z-index: 20;
   }
 
   .dialog-container {
