--- a/src/components/simple-calendar/simple-calendar.scss
+++ b/src/components/simple-calendar/simple-calendar.scss
@@ -138,7 +138,8 @@
           &.highlighted {
             outline: 2px solid #1976d2;
             box-shadow: 0 0 8px rgba(25, 118, 210, 0.4);
-            z-index: 1;
+            position: relative;
+            z-index: 0;
             
             &.available {
               background-color: #c8e6c9;
